vlib/v/checker/tests/option_ptr_without_unwrapp_err.out
vlib/v/checker/tests/option_ptr_without_unwrapp_err.vv:7:13: error: cannot use `?&Node` as `Node`, it must be unwrapped first in argument 1 to `set_trace`
    5 | fn set_trace(n Node) {
    6 |     if n.parent != none {
    7 |         set_trace(n.parent)
      |                   ~~~~~~~~
    8 |     }
    9 | }
