vlib/v/checker/tests/option_ptr_without_unwrapp_err.vv
struct Node {
	parent ?&Node
}

fn set_trace(n Node) {
	if n.parent != none {
		set_trace(n.parent)
	}
}

fn main() {
	mut initial_node := Node{
		parent: none
	}
	set_trace(initial_node)
	assert true
}
